--- a/01-point-pattern-analysis-vignette.qmd
+++ b/01-point-pattern-analysis-vignette.qmd
@@ -124,7 +124,7 @@ pp_sub |> plot()
 
 Then splitting the point pattern and plotting a multivariate view on the same pattern.
 
-```{r, fig.height=7, fig.width=7}
+```{r, fig.height=5, fig.width=10}
 pp_sub |> split() |> plot()
 ```
 
@@ -145,7 +145,7 @@ marks(pp_sub) <- gex
 
 Now that we points with multivariate continuous marks
 
-```{r, fig.height=7, fig.width=10}
+```{r, fig.height=5, fig.width=10}
 #create a dataframe in long format for plotting
 pp_df <- pp_sub %>% as.data.frame() %>% pivot_longer(cols = 3:5)
 
@@ -166,7 +166,7 @@ We note that the distribution of expression of the genes `Pgr` and `Slc18a2` is 
 
 We can compare patterns between marks of the same type. This is referred to as a within mark comparison in our vignette. We can compare discrete marks, so the distribution of one single mark, e.g. a cell type. 
 
-```{r, fig.height=7, fig.width=10}
+```{r, fig.height=5, fig.width=10}
 #create a dataframe from the point pattern
 pp_df <- lapply(zstack_list, function(x){
    df <- pp_ls[[x]] %>% as.data.frame()
@@ -188,7 +188,7 @@ Here, we plot the distribution of mature oligodendrocytes across three slices of
 
 Continuous marks can be compared as well, e.g. the expression of a gene across slices of a tissue
 
-```{r, fig.height=7, fig.width=10}
+```{r, fig.height=5, fig.width=10}
 pp_df <- lapply(zstack_list, function(x){
     #subset the original SpatialExperiment to our example slide -0.09
     sub <- spe[, spe$sample_id == x]
@@ -215,15 +215,72 @@ ggplot(pp_df, aes(x,y, colour = Esr1)) +
 
 We note that the gene `Esr1` is differently distributed across the slices of the 3D sample. 
 
-#### Cross Mark Comparison
+#### Correlation
 
-### Correlation
+Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$. This is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204].
 
-#### Global Measures
+##### Global Measures
 
-#### Local Measures
+Global correlation measures quantify the correlation in the entire window. Global Ripley's $K$ is defined as:
 
-### Spacing
+$$
+\hat{K}(r) = \frac{|W|}{n(n-1)}\sum_{i=1}^n\sum_{j=1 \\j \neq i}^n\{d_{ij}\leq r\} e_{ij}(r)
+$$
+
+In the formula above we note a few things:
+
+- The function is normalised by the number of points $n$ and the window size $|W|$
+
+- the term $e_{ij}(r)$ is an edge correction - see the section on `border corrections` further down in the vignette.
+
+Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022].
+
+$$
+L(r) = \sqrt{\frac{\hat{K}(r)}{\pi}}.
+$$
+
+```{r, message = FALSE, fig.height=5, fig.width=10}
+calcMetric <- function(fun, pp_ls, celltype){
+  res_df <- lapply(zstack_list, function(x){
+    res <- lohboot(pp_ls[[x]][[celltype]], fun = fun)
+    res$stack <- x
+    return(res)
+  }) %>% bind_rows()
+  return(res_df)
+}
+
+separateMarks <- function(pp){
+  #split the multitype point process into several single type processes
+  ppls <- split(pp)
+  return (ppls)
+}
+#the point patterns separated by their marks
+pp_ls <- lapply(pp_ls, separateMarks)
+
+res1 <- calcMetric('Kest', pp_ls, 'OD Mature')
+
+p <- ggplot(res1, aes(r, iso, colour = stack)) + geom_line() + theme_light() + geom_ribbon(aes(ymin = lo, ymax = hi), alpha = 0.25, show.legend = FALSE)
+
+res2 <- calcMetric('Lest', pp_ls,  'OD Mature')
+
+q <- ggplot(res2, aes(r, iso, colour = stack)) + geom_line() + theme_light() + geom_ribbon(aes(ymin = lo, ymax = hi), alpha = 0.25, show.legend = FALSE)
+
+p|q
+```
+
+##### Local Measures
+
+#### Spacing
+
+### Cross Mark Comparison
+
+#### Correlation
+
+##### Global Measures
+
+##### Local Measures
+
+#### Spacing
 
 ### Border Corrections
 
